<resources>
    <string name="app_name">E-commerce</string>
    <string name="title_home">Home</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_account">Account</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_cart">Cart</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_checkout">Checkout</string>
    <string name="title_transaction_detail">Transaction Detail</string>
    <string name="title_search">Search</string>
    <string name="title_shipping_address">Shipping Address</string>
    <string name="title_payment_methods">Payment Methods</string>
    <string name="title_voucher">Add Voucher</string>
    <string name="title_order_summary">Order Summary</string>
    <string name="label_quantity">Quantity</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping_fee">Shipping Fee</string>
    <string name="total">Total</string>
    <string name="free">Free</string>
    <string name="voucher">Voucher</string>
    <string name="transaction_id_label">Transaction ID</string>
    <string name="order_date">Order Date</string>
    <string name="ordered_items">Ordered Items</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="categories">Categories</string>
    <string name="price_range">Price Range</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_item">New</string>
    <string name="general_settings">General</string>
    <string name="account_settings">Account</string>
    <string name="notification_preferences">Notification Preferences</string>
    <string name="system_notification">System Notification</string>
    <string name="promotion_notification">Promotion Notification</string>
    <string name="image_product">Product Image</string>
    <string name="image_location">Address Location</string>
    <string name="image_cod_payment">Cash On Delivery Payment</string>
    <string name="image_card_payment">Card Payment</string>
    <string name="image_voucher">Voucher</string>
    <string name="text_unknown_name">Add Name</string>
    <string name="text_no_address">No Shipping Address Saved</string>
    <string name="text_seller_display_name">Seller Name</string>
    <string name="text_seller_username">\@SellerUsername</string>
    <string name="text_default_email">Example@email.com</string>
    <string name="image_chevron_right">Go to detail</string>
    <string name="percentage">Percentage</string>
    <string name="setting_icon">Settings Icon</string>
    <string name="dialog_icon">Dialog Icon</string>
    <string name="currency_dollar">$%1$d</string>
    <string name="minus_currency_dollar">- $%1$d</string>
    <string name="no_account_sign_up">Don\'t have an account ? %1$s</string>
    <string name="have_account_sign_in">Already have an account ? %1$s</string>
    <string name="transaction_id">#%1$s</string>
    <string name="pieces">%1$s pc(s)</string>
    <string name="item">%1$s item</string>
    <string name="items">(%1$s items)</string>
    <string name="order_success_desc">Your order #%1$s has been successfully placed</string>
    <string name="price_range_value">($%1$d to $%2$d)</string>
    <string name="exp_date">Exp: %1$s</string>
    <string name="voucher_min_amount_not_enough">Add %1$d more to use this voucher</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="enter_voucher">Enter your voucher</string>
    <string name="name">Name</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="input_street">Street Address</string>
    <string name="input_city">City</string>
    <string name="input_state">State</string>
    <string name="input_zip_code">Zip Code</string>
    <string name="input_country">Country</string>
    <string name="search_product">Search products…</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="wishlist">Wishlist</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="edit">Edit</string>
    <string name="add_address">Add Address</string>
    <string name="favorite">Favorite</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="close">Close</string>
    <string name="decrease_qty">Decrease Quantity</string>
    <string name="increase_qty">Increase Quantity</string>
    <string name="delete">Delete</string>
    <string name="checkout">Checkout</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="go_shopping">Go Shopping</string>
    <string name="delivery_payment">Cash on Delivery</string>
    <string name="card_payment">Debit / Credit Card</string>
    <string name="apply">Apply</string>
    <string name="order">Order</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="filter_list">Filter List</string>
    <string name="newest">Newest</string>
    <string name="price_low_high">Price (Low to High)</string>
    <string name="price_high_low">Price (High to Low)</string>
    <string name="clear">Clear</string>
    <string name="send_link">Send Link</string>
    <string name="vouchers">Vouchers</string>
    <string name="my_vouchers">My Vouchers</string>
    <string name="theme">Theme</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="update">Update</string>
    <string name="confirm">Confirm</string>
    <string name="login_description">Please enter your details.</string>
    <string name="register_description">Let\'s get started with a free account.</string>
    <string name="continue_with_other">or continue with</string>
    <string name="label_description">Description</string>
    <string name="empty_cart">Your cart is empty</string>
    <string name="empty_transactions">No transactions yet</string>
    <string name="empty_wishlist">No item in wishlist</string>
    <string name="empty_voucher">No voucher</string>
    <string name="empty_search_result">No item found</string>
    <string name="voucher_used">Voucher already used</string>
    <string name="start_searching">Find your favorite products</string>
    <string name="error_no_product_desc">This product has been removed by the seller</string>
    <string name="error_login_required_desc">You need to sign in to access this feature</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="debit_credit_card">Debit / Credit Cart</string>
    <string name="reset_password_desc">Enter your email to receive a reset link</string>
    <string name="sign_out_description">Are you sure you want to sign out of the app?</string>
    <string name="delete_account_description">This action is permanent. Data cannot be recovered.</string>
    <string name="re_auth_password">Enter your password to authenticate</string>
    <string name="notification_preferences_description">Choose which notification you want to get</string>
    <string name="error_user_not_found">Please Login first</string>
    <string name="error_not_available">Not Available Yet</string>
    <string name="error_email_is_required">Email is required</string>
    <string name="error_enter_valid_email">Please enter a valid email</string>
    <string name="error_password_is_required">Password is required</string>
    <string name="error_password_too_short">Password must be at least 8 characters</string>
    <string name="error_password_do_not_match">Password do not match</string>
    <string name="error_email_not_found">This email is not registered</string>
    <string name="error_wrong_password">Wrong password. Please try again</string>
    <string name="error_unknown">An unknown error occurred</string>
    <string name="error_registration">Registration Failed</string>
    <string name="error_unavailable_product">Product no longer available</string>
    <string name="error_no_connection">No Internet Connection!</string>
    <string name="error_failed_to_load">Failed to load</string>
    <string name="error_failed_to_add_to_cart">Failed to add item to cart</string>
    <string name="error_login_required">Login Required</string>
    <string name="error_remove_unavailable_item">Please remove unavailable items first</string>
    <string name="error_no_voucher">Please enter a code</string>
    <string name="error_empty_cart">Cart empty</string>
    <string name="error_name_blank">Please enter your name</string>
    <string name="error_name_too_long">Name cannot exceed 30 characters</string>
    <string name="error_street_blank">Street address is required</string>
    <string name="error_city_blank">City is required</string>
    <string name="error_country_blank">Country is required</string>
    <string name="error_invalid_zip">Invalid Zip Code</string>
    <string name="error_no_address">Please add a shipping address</string>
    <string name="error_failed_reset_password">Failed to reset password</string>
    <string name="error_google_login">Google sign in cancelled or failed</string>
    <string name="error_google_register">Google sign up cancelled or failed</string>
    <string name="error_voucher_cart_still_loading">Cannot apply voucher while cart is loading</string>
    <string name="error_blank_code">Please enter a voucher code</string>
    <string name="error_voucher_not_found">Voucher code not found</string>
    <string name="error_voucher_used_or_expired">This voucher already used or expired</string>
    <string name="error_current_pass_is_required">Please enter your current password</string>
    <string name="error_new_pass_is_required">Please enter a new password</string>
    <string name="error_conf_pass_is_required">Please confirm your new password</string>
    <string name="error_new_pass_not_match">New passwords do not match</string>
    <string name="error_new_pass_same">New password cannot be the same as the old one</string>
    <string name="error_current_password_wrong">Current password wrong. Try again</string>
    <string name="error_verification_failed">Verification Failed</string>
    <string name="error_notification_permission_denied">"Notifications blocked. Please enable in Settings."</string>
    <string name="success_register">Registration Successful!</string>
    <string name="success_login">Login Successful!</string>
    <string name="success_add_to_cart">Added to Cart!</string>
    <string name="success_add_to_cart_offline">Saved to cart (Offline). Will sync later</string>
    <string name="success_order_placed">Order Placed!</string>
    <string name="success_update_name">Name updated successfully!</string>
    <string name="success_update_address">Address updated successfully!</string>
    <string name="success_reset_email_sent">Reset link sent! Check your email</string>
    <string name="success_copy_clipboard">Copied to clipboard</string>
    <string name="success_voucher_applied">Voucher Successfully Applied</string>
    <string name="success_update_password">Password Updated Successfully</string>
    <string name="success_delete_account">Account deleted successfully</string>
    <string name="theme_choose_theme">Choose Theme</string>
    <string name="theme_dark_mode">Dark Mode</string>
    <string name="theme_light_mode">Light Mode</string>
</resources>