<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_cart_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_product_image"
            android:layout_width="120dp"
            android:layout_height="138dp"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="4dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/iv_product_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_product"
                tools:src="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge.Emphasized"
            app:layout_constraintTop_toTopOf="@id/cv_product_image"
            app:layout_constraintBottom_toTopOf="@id/tv_product_price"
            app:layout_constraintStart_toEndOf="@id/cv_product_image"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Classic Comfort Drawstring Joggers" />

        <TextView
            android:id="@+id/tv_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge.Emphasized"
            app:layout_constraintTop_toBottomOf="@id/tv_product_name"
            app:layout_constraintBottom_toTopOf="@id/tv_product_quantity_label"
            app:layout_constraintStart_toStartOf="@id/tv_product_name"
            tools:text="$79" />

        <TextView
            android:id="@+id/tv_product_quantity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_quantity"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium.Emphasized"
            app:layout_constraintTop_toBottomOf="@id/tv_product_price"
            app:layout_constraintBottom_toBottomOf="@id/cv_product_image"
            app:layout_constraintStart_toStartOf="@id/tv_product_name" />

        <LinearLayout
            android:id="@+id/quantity_selector_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            android:background="@drawable/pill_quantity_background"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintTop_toTopOf="@id/tv_product_quantity_label"
            app:layout_constraintBottom_toBottomOf="@id/tv_product_quantity_label"
            app:layout_constraintStart_toEndOf="@id/tv_product_quantity_label"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/btn_decrease_qty"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_remove_24"
                android:contentDescription="@string/decrease_qty"
                android:background="?attr/selectableItemBackgroundBorderless" />

            <TextView
                android:id="@+id/tv_product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium.Emphasized"
                tools:text="1" />

            <ImageButton
                android:id="@+id/btn_increase_qty"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_add_24"
                android:contentDescription="@string/increase_qty"
                android:background="?attr/selectableItemBackgroundBorderless" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_item_unavailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:gravity="center"
        android:visibility="gone"
        android:background="?attr/colorCustomTextInputLayout"
        android:text="@string/error_unavailable_product"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge.Emphasized"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>